# zephyr-devices

./: .gitignore  NOTICE.txt  README.md  contributing.md
boards/arm/nrf52833_herald_base/: Kconfig.board  Kconfig.defconfig  board.cmake  nrf52833_herald_base.dts  nrf52833_herald_base.yaml  nrf52833_herald_base_defconfig
boards/arm/nrf52833_herald_base/doc/: index.rst
samples/lisde12/: CMakeLists.txt  prj.conf
samples/lisde12/src/: main.c
